--- a/swarm-login-service/src/main/resources/static/index.html
+++ b/swarm-login-service/src/main/resources/static/index.html
@@ -54,7 +54,7 @@
             <div id="layoutSidenav_content">
                 <main>
                     <div class="container-fluid px-4">
-                        <h1 class="mt-4">대시보드</h1>
+                        <h1 class="mt-4">DashBoard</h1>
                         <ol class="breadcrumb mb-4">
                             <li class="breadcrumb-item active">첫 페이지</li>
                         </ol>
